# DockUP

./: .gitignore  LICENSE  README.md  convert_3D.py  dockup_agent_cli.py  pyproject.toml  run_dockup_agent_suite.py  setup.sh  start.sh
docking_app/: app.py  cli.py  config.py  helpers.py  manifest.py  mcp_server.py  models.py  prepared_artifacts.py  services.py  sessions.py  state.py
dockup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: agent_system_plan.md
documents/: APP_FUNCTIONALITY.md  ISSUES_ANALYSIS.md
figure_scripts/: __init__.py  fine_tune_report.py  generate_dimer_report_figures_only.py  get_dimer_interactions.py  get_dimer_stats.py  run_dimer_analysis.py
mcp/: README.md  dockup-control.json
open_problems/: 2026-04-13-findings.md
requirements/: core.txt  docking.txt  optional.txt
scripts/: __init__.py  autogrid.py  build_interaction_map.py  cli.sh  dock1.sh  dockup_mcp_server.sh  gemini_mcp_dock.sh  rmsd_rdkit.py  run1.sh  run_dopamine_35a_vinagpu_medium.sh  run_dopamine_report_native_20a_redock_local_docs.sh  run_dopamine_report_native_30a_gpu_and_vina.sh  run_multi_ligand.py
tests/: README.md  conftest.py  e2e_render.py  test2.py  test_agent_control_tools_unit.py  test_agent_observer_unit.py  test_agent_operator_cli_unit.py  test_agent_suite_builder_unit.py  test_api.py  test_config_json_unit.py  test_control_api_unit.py  test_e2e_docking.py  test_frontend_queue_smoke.py  test_gemini_extension_unit.py  test_gridbox_p2rank_unit.py  test_ligand_3d_popup_unit.py  test_ligand_naming_unit.py  test_live_client_cli_unit.py  test_mcp_server_unit.py  test_ollama_agent_unit.py  test_otofigure_create_visualization_unit.py  test_otofigure_final_formatter_unit.py  test_otofigure_render_unit.py  test_pocket_finder_config_unit.py  test_pocket_finder_runner_unit.py  test_prepared_artifacts_unit.py  test_queue_batch_remove_unit.py  (+6 more)
(+92 files in other folders)
